--- a/requirements.txt
+++ b/requirements.txt
@@ -48,6 +48,7 @@ defusedxml==0.7.1
 Deprecated==1.2.13
 dill==0.3.5.1
 dnspython==2.2.1
+docker==6.0.1
 docutils==0.19
 email-validator==1.2.1
 entrypoints==0.4
