--- a/requirements.txt
+++ b/requirements.txt
@@ -146,6 +146,7 @@ nbclient==0.7.2
 nbconvert==7.2.9
 nbformat==5.7.3
 nest-asyncio==1.5.5
+networkx==3.1
 notebook==6.5.3
 notebook_shim==0.2.2
 numpy==1.23.2
