--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,9 @@ services:
     volumes:
       - /home/aiandrejcev/minio/data:/data 
     env_file:
-      - ~/.minio_env_variables.list 
+      # - ~/.minio_env_variables.list 
+      - .env
+    # profiles: ["minio"]
 
   pgdatabase:
     image: postgres:13
@@ -22,6 +24,7 @@ services:
       - "/home/aiandrejcev/postgres_docker/data:/var/lib/postgresql/data:rw"
     ports:
       - "5432:5432"
+    # profiles: ["database"]
 
   pgadmin:
     image: dpage/pgadmin4
@@ -29,12 +32,82 @@ services:
       - .env
     ports:
       - "8080:80"
+    # profiles: ["pgadmin"]
         
-  mage_ai_container:
-    image: mageai/mageai:latest
-    ports:
-      - "6789:6789"
+  ## Prefect Orion API
+  orion:
+    image: prefecthq/prefect:2.7.7-python3.9
+    restart: always
     volumes:
-      - "/home/aiandrejcev/ufc:/home/src"
-    command: /app/run_app.sh mage start demo_project
-    
+      - "/home/aiandrejcev/prefect_docker/data:/.prefect"
+      - "/home/aiandrejcev/ufc:/mnt/"
+    entrypoint: ["prefect", "orion", "start"]
+    environment:
+      - PREFECT_ORION_API_HOST=0.0.0.0
+    ports:
+      - 4200:4200
+
+
+
+
+
+  ### Prefect Database
+  # database:
+  #   image: postgres:15.2-alpine
+  #   restart: always
+  #   environment:
+  #     - POSTGRES_USER=postgres
+  #     - POSTGRES_PASSWORD=postgres
+  #     - POSTGRES_DB=prefect
+  #   expose:
+  #     - 5432
+  #   volumes: 
+  #     - /home/aiandrejcev/tmp_psql_volume_folder:/var/lib/postgresql/data
+  #   profiles: ["server"]
+
+  ### Prefect Server API and UI
+#   server:
+#     image: prefecthq/prefect:2.10.7-python3.9
+#     restart: always
+#     volumes:
+#       - /home/aiandrejcev/prefect_docker/data:/root/.prefect
+#     entrypoint: ["/opt/prefect/entrypoint.sh", "prefect", "server", "start"]
+#     environment:
+#       # If you want to access Prefect Server from anywhere other than the Docker host machine, you will need to change
+#       # PREFECT_UI_URL to match the external hostname/IP used to load the  UI in your web browser.
+#       - PREFECT_UI_URL=http://127.0.0.0:4200/api
+#       - PREFECT_API_URL=http://127.0.0.1:4200/api
+#       - PREFECT_SERVER_API_HOST=0.0.0.0
+#       - PREFECT_API_DATABASE_CONNECTION_URL=postgresql+asyncpg://postgres:postgres@database:5432/prefect
+#       # Uncomment the following line if you want to use the 'S3 Bucket' storage block instead of the older 'S3' storage
+#       # - EXTRA_PIP_PACKAGES=prefect-aws
+#     ports:
+#       - 4200:4200
+#     depends_on:
+#       - database
+#     profiles: ["server"]
+
+#   ## Prefect Agent
+#   agent:
+#     image: prefecthq/prefect:2.10.7-python3.9
+#     restart: always
+#     entrypoint: ["prefect", "agent", "start", "--pool", "default-agent-pool", "--work-queue", "default"]
+#     environment:
+#       - PREFECT_API_URL=http://server:4200/api
+# #       Use PREFECT_API_KEY if connecting the agent to Prefect Cloud
+# #     - PREFECT_API_KEY=YOUR_API_KEY
+#     profiles: ["agent"]
+
+#   ### Prefect CLI
+#   cli:
+#     image: prefecthq/prefect:2.10.7-python3.9
+#     entrypoint: "bash"
+#     # working_dir: "/root/flows"
+#     volumes:
+#       - "/home/aiandrejcev/ufc/src/pipelines/flows:/root/flows"
+#       - "/home/aiandrejcev/ufc/src/pipelines/flows:/root/flows"
+#     environment:
+#       - PREFECT_API_URL=http://server:4200/api
+# #       Use PREFECT_API_KEY to use the CLI to interact with Prefect Cloud
+# #     - PREFECT_API_KEY=YOUR_API_KEY
+#     profiles: ["cli"]
