--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,8 @@ cron-descriptor==1.2.31
 croniter==1.3.7
 cryptography==36.0.2
 cycler==0.11.0
+Cython==3.0.0
+dacite==1.8.1
 dask==2023.2.1
 datadog==0.44.0
 dateparser==1.1.8
@@ -92,13 +94,16 @@ gunicorn==20.1.0
 h11==0.12.0
 h2==4.1.0
 hpack==4.0.0
+htmlmin==0.1.12
 httpcore==0.15.0
 httpx==0.23.1
 hyperframe==6.0.1
 idna==3.3
+ImageHash==4.3.1
 importlib-metadata==4.12.0
 inflection==0.5.1
 iniconfig==2.0.0
+ipycytoscape==1.3.3
 ipykernel==6.15.0
 ipython==8.4.0
 ipython-genutils==0.2.0
@@ -108,6 +113,7 @@ jedi==0.18.1
 Jinja2==3.1.2
 joblib==1.2.0
 jsonpatch==1.32
+jsonpickle==3.0.1
 jsonpointer==2.3
 jsonschema==4.15.0
 jupyter-client==7.3.4
@@ -141,6 +147,7 @@ mdurl==0.1.2
 minio==7.1.11
 mistune==2.0.5
 multidict==6.0.4
+multimethod==1.9.1
 nbclassic==0.5.3
 nbclient==0.7.2
 nbconvert==7.2.9
@@ -162,8 +169,10 @@ pandocfilters==1.5.0
 parso==0.8.3
 partd==1.3.0
 pathspec==0.9.0
+patsy==0.5.3
 pendulum==2.1.2
 pexpect==4.8.0
+phik==0.12.3
 pickleshare==0.7.5
 Pillow==9.2.0
 platformdirs==3.0.0
@@ -197,6 +206,8 @@ python-slugify==6.1.2
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
 pytzdata==2020.1
+pyvis==0.3.1
+PyWavelets==1.4.1
 PyYAML==6.0
 pyzmq==23.2.1
 readchar==4.0.5
@@ -221,14 +232,17 @@ six==1.16.0
 smmap==5.0.0
 sniffio==1.3.0
 soupsieve==2.3.2.post1
+spectate==1.0.1
 SQLAlchemy==1.4.40
 SQLAlchemy-JSONField==1.0.0
 SQLAlchemy-Utils==0.38.3
 sqlparse==0.4.2
 stack-data==0.5.0
 starlette==0.26.1
+statsmodels==0.14.0
 swagger-ui-bundle==0.0.9
 tabulate==0.8.10
+tangled-up-in-unicode==0.2.0
 tenacity==8.0.1
 termcolor==1.1.0
 terminado==0.17.1
@@ -242,6 +256,7 @@ torch==1.13.1
 tornado==6.1
 tqdm==4.64.0
 traitlets==5.3.0
+typeguard==2.13.3
 typer==0.7.0
 typing_extensions==4.3.0
 tzdata==2023.2
@@ -250,13 +265,17 @@ uc-micro-py==1.0.1
 unicodecsv==0.14.1
 urllib3==1.26.12
 uvicorn==0.21.1
+visions==0.7.5
 wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==1.5.1
 websockets==10.4
 Werkzeug==2.2.2
 widgetsnbextension==4.0.6
+wordcloud==1.9.2
 wrapt==1.14.1
 WTForms==2.3.3
 yarl==1.8.2
+ydata-profiling==4.3.2
+yfiles-jupyter-graphs==1.4.7
 zipp==3.8.1
